--- a/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
+++ b/Frontend/src/app/MOHComponents/view-weight-table/view-weight-table.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <router-outlet></router-outlet>
   <div class="row">
-    <div class="col-md-3" ><a routerLink="AddWeightHeight" class="btn btn-info btn-block">Add New Weight Height Form</a></div>
+    <div class="col-md-3" ><a routerLink="AddWeightHeight" class="btn btn-info btn-block">{{ 'weightHeight.newform' | translate }}</a></div>
   </div>
   <div class="row">
     <div class="col-md-12">
