Show Password added

--- a/Frontend/src/app/reg-mother/reg-mother.component.scss
+++ b/Frontend/src/app/reg-mother/reg-mother.component.scss
@@ -31,3 +31,10 @@ body {
     margin-right: 40%;
     margin-top: 20px;
 }
+
+
+.material-icons{
+    margin-top: 15px;
+    cursor: pointer;
+    margin-left:-15px;
+}
