--- a/Frontend/src/app/reg-phm/reg-phm.component.scss
+++ b/Frontend/src/app/reg-phm/reg-phm.component.scss
@@ -31,3 +31,13 @@ body {
     margin-right: 40%;
     margin-top: 20px;
 }
+
+.example-part-width{
+    width: 80%;
+}
+
+.material-icons{
+    margin-top: 15px;
+    cursor: pointer;
+    margin-left:-15px;
+}
