--- a/Frontend/src/app/reg-mother/reg-mother.component.html
+++ b/Frontend/src/app/reg-mother/reg-mother.component.html
@@ -15,24 +15,34 @@
         <mat-card-title>Register Mother</mat-card-title>
         <mat-card-subtitle></mat-card-subtitle>
       </mat-card-header>
-      <form [formGroup]="regMotherForm" [hidden]="success" (ngSubmit)="onSubmit()">
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Village Id" type="text" formControlName="villageId">
-        </mat-form-field>
+      <div class="container">
+        <form [formGroup]="regMotherForm" [hidden]="success" (ngSubmit)="onSubmit()">
           <mat-form-field class="example-full-width">
-            <input matInput placeholder="Email" type="text" formControlName="username">
+            <input matInput placeholder="Village Id" type="text" formControlName="villageId">
           </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <input matInput placeholder="User Id Without VIllage Id" type="text" formControlName="userid">
-          </mat-form-field>
-          <mat-form-field class="example-full-width">
-            <input matInput placeholder="Password" type="text" formControlName="password">
-          </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Email" type="text" formControlName="username">
+            </mat-form-field>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="User Id Without VIllage Id" type="text" formControlName="userid">
+            </mat-form-field>
+            <div class="row">
+              <div class="col-md-11">
+                <mat-form-field class="example-full-width">
+                  <input matInput placeholder="Password" type="{{passwordType}}" formControlName="password">
+                </mat-form-field>
+              </div>
+              <div class="col-md-1">
+                <i class="material-icons" (click)="showPassword()">remove_red_eye</i>
+              </div>
+              
+            </div>
+            
 
-          <button mat-raised-button color="primary" [disabled]="!regMotherForm.valid" type="submit">Login</button>
+            <button mat-raised-button color="primary" [disabled]="!regMotherForm.valid" type="submit">Login</button>
 
-      </form>
-
+        </form>
+    </div>
     </mat-card>
   </div>
 
